--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+html, body {
+  min-height: 100%;
+}
+body {
+  background-color: #f9fafb;
+}
+html.dark body {
+  background-color: #0f172a !important;
+}
